# task-management-app

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
.github/: python.instructions.md  reactjs.instructions.md
.github/prompts/: create-reactjs-app.prompt.md  create-reactjs-tests.prompt.md  project.reactjs.prompts.md  tests.reactjs.prompts.md
.github/workflows/: python-app.yml
app/: logging_config.py  main.py  seeding.py  utils.py
app/database/: views.py
app/dependencies/: auth.py
app/models/: task.py  team.py
app/repositories/: abstract_repository.py  task_repository.py  team_member_repository.py  team_repository.py
app/routes/: auth.py  project_manager.py  team_lead.py  team_member.py
app/services/: task_service.py  team_member_service.py  team_service.py
config/: database.py
frontend/: .gitignore  babel.config.js  frontend_analysis_and_prd.md  jest.config.js  package.json
frontend/__tests__/: DashboardPage.test.jsx  Home.test.jsx  LoginPage.test.jsx  LogoutPage.test.jsx  NotFoundPage.test.jsx  Profile.test.jsx  ProjectManagerTasksPage.test.jsx  ProjectManagerTeamMembersPage.test.jsx  ProjectManagerTeamsPage.test.jsx  ProjectManagerUsersPage.test.jsx  Tasks.test.jsx  TeamLeadTasksPage.test.jsx  TeamLeadTeamMembersPage.test.jsx  TeamLeadTeamsPage.test.jsx  TeamMemberTasksPage.test.jsx  Teams.test.jsx
frontend/src/: App.jsx  api.js  dashboardSlice.js  main.jsx  store.js  userSlice.js  vite-env.d.ts
frontend/src/components/: NavigationHeader.jsx  (+1 more)
tests/: conftest.py  test_endpoints.py  test_schemas.py  test_task_model.py  test_task_repository.py  test_task_service.py  test_team_member_model.py  test_team_member_repository.py  test_team_member_service.py  test_team_model.py  test_team_repository.py  test_team_service.py
(+14 files in other folders)
